# softdev7

./: .gitignore  README.md
controller/: .env  CMakeLists.txt  CMakePresets.json  README.md  index.js  package-lock.json  package.json
controller/config/: green_sets.json  intersection_data.json  lanes_schema.json
controller/config/misc/: roadway_sensor_status_initial.json  trafficlight_status_bridge.json  trafficlight_status_initial.json
controller/config/topic_schemas/: sensor_bruggen.json  sensor_rijbaan.json  sensoren_bruggen.json  sensoren_rijbaan.json  sensoren_speciaal.json  tijd.json  valid_sensors.json  voorrangsvoertuig.json
controller/jest/: handle_traffic_light_update.test.js  handling.test.js  handling_sensor_information.test.js  load_intersection_data.test.js  updateBridge.test.js  updateCrossing.test.js
controller/src/: CMakeLists.txt  bridge.js  common_sockets.js  controller.c  controller.h  crossing.js  handle_traffic_light_update.js  handling.js  handling_sensor_information.js  load_intersection_data.js  sensor_data_container.js  sensor_schemas.js  sockets_setup.js  subscription.js  utils.js  validate_env_data.js
controller/src/socket_data/: sensors_roadway_status.js
controller/test_connection/: .env  index.js  testcase_1_WS-01.js  testcase_1_WS-02.js  testcase_1_WS-03.js  testcase_1_WS-04.js
regressietester/: handle_validation.py  handle_validation_errors.py  logs.txt  main.py  test_handle_validation_errors.py
simlatorCPP/: stoplichtSimulator.cpp
simulator/: TextFile1.txt  stoplichtSimulator.sln
simulator/NodeData/: NodeData.txt  (+2 more)
(+49 files in other folders)
